[package]
name = "bit_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["full"] }
reqwest = "0.12.7"
urlencoding = "2.1.3"
sha1_smol = "1.0.1"